# advent-of-code_ml

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  advent_of_code.opam  dune-project  flake.nix  fly.toml
.github/workflows/: main.yml
lib/y2023/: day01.ml  day02.ml  day03.ml  dune  util.ml  y2023.ml
lib/y2023/test/: day01.ml  day01.test.ml  day02.ml  day03.ml  dune
lib/y23/: day01.ml  day02.ml  day03.ml  day04.ml  day05.ml  day06.ml  day07.ml  day08.ml  day09.ml  dune  util.ml  y23.ml  y23.mli
lib/y23/test/: day01.ml  day02.ml  day03.ml  day04.ml  day05.ml  day06.ml  day07.ml  day08.ml  day09.ml  dune  util.ml
